--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./images/favicon.svg" rel="icon" sizes="any" />
+    <meta name="color-scheme" content="dark light" />
     <title>Сложно сосредоточиться</title>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/globals.css" />
+    <link rel="stylesheet" href="./styles/variables.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/dark.css" />
+    <link rel="stylesheet" href="./styles/light.css" />
   </head>
   <body class="page">
     <header class="header decorated-zone">
@@ -34,7 +42,246 @@
           </li>
         </ul>
       </nav>
+      <div class="rec" aria-hidden="true">
+        <span class="rec-text">rec</span>
+        <span class="rec-dot"></span>
+      </div>
+
+      <h1 class="header-title">no focus</h1>
+
+      <p class="header-description">
+        Что делать, когда не можешь делать ничего <br />
+        Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+      </p>
     </header>
+    <main class="main">
+      <section class="section-why">
+        <h2 class="section-title">Почему сосредоточиться так сложно</h2>
+        <ul class="list-articles">
+          <li class="list-item">
+            <article class="list-article">
+              <h3 class="list-title">Многозадачность</h3>
+              <p class="list-decription">
+                Особенно сложно сосредоточиться, когда задач много и все они —
+                важные. Где же легендарная многозадачность, когда она так нужна
+                вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
+                её просто не существует. Исследователи
+                <a
+                  target="_blank"
+                  href="https://dana.org/article/multicosts-of-multitasking/"
+                  class="link"
+                  >выяснили</a
+                >, что мозгу тяжело концентрироваться даже на двух делах
+                одновременно. А когда в поле внимания попадает несколько важных
+                задач, организм паникует и выделяет кортизол и адреналин —
+                «гормоны стресса». Из-за этого мы работаем невнимательно:
+                ошибаемся и быстро устаём.
+              </p>
+            </article>
+          </li>
+          <li class="list-item">
+            <article class="list-article">
+              <h3 class="list-title">Дофамин</h3>
+              <p class="list-decription">
+                С гормонами стресса всё понятно, но дальше — ещё интереснее. В
+                нашей невозможности сосредоточиться замешана и полная
+                противоположность стрессу — дофамин. Это вещество участвует в
+                системе вознаграждения мозга. Причём тут он? Мы часто
+                отвлекаемся от важной задачи на что-то более «приятное» для
+                мозгов. Например, смотрим лайки в соцсетях. В это время и
+                выделяется дофамин — и мы чувствуем удовольствие. Получается
+                замкнутый круг: чем больше отвлекаешься, тем больше удовольствия
+                получаешь.
+              </p>
+            </article>
+          </li>
+        </ul>
+      </section>
+      <section class="section-reasons">
+        <h2 class="section-title">Что снижает концентрацию внимания?</h2>
+        <ul class="list-articles">
+          <li class="list-item">
+            <article class="list-article">
+              <h4 class="list-title">Многозадачность</h4>
+              <p class="list-decription">
+                Как концентрация может снижаться из-за… концентрации? Любая
+                стрессовая ситуация (и резко меняющийся мир в целом) заставляет
+                наш мозг постоянно «сканировать» окружающую среду на предмет
+                опасности. Например, читать новости вместо работы. Но быть
+                собранными всё время — невозможно. Концентрация — мышца, и она
+                может не выдержать, если не давать ей отдохнуть.
+              </p>
+            </article>
+          </li>
+          <li class="list-item">
+            <article class="list-article">
+              <h4 class="list-title">Еда</h4>
+              <p class="list-decription">
+                «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+                доставляют в мозг энергию и помогают ему лучше работать. Но
+                уходит эта энергия также быстро, как и приходит. А мы в
+                результате попадаем на «углеводные качели»: как только действие
+                «быстрых углеводов» заканчивается, мы чувствуем усталость и
+                сонливость. И хотим ещё больше быстрых углеводов.
+              </p>
+            </article>
+          </li>
+          <li class="list-item">
+            <article class="list-article">
+              <h4 class="list-title">Гаджеты</h4>
+              <p class="list-decription">
+                Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+                наушниках — подкаст, а на компьютере фоном — ещё и видео с
+                забавными утятами. В результате мозг пытается переключиться с
+                одной задачи на другую — и просто не может. А чтобы вернуться к
+                состоянию полной концентрации, человеку в среднем нужно 20
+                минут. Вот и получается, что чем больше времени мы проводим в
+                гаджетах, тем больше времени затем нужно, чтобы вернуться к
+                работе.
+              </p>
+            </article>
+          </li>
+        </ul>
+      </section>
+      <section class="section-adviсe">
+        <h2 class="section-title">
+          Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
+          секунд)
+        </h2>
+        <div>
+          <h3 class="list-title list-title-advice">
+            5 простых (на самом деле не очень) советов
+          </h3>
+          <ul class="list-articles">
+            <li class="list-item">
+              <article class="list-article">
+                <h4 class="list-title">Представьте небо и облака</h4>
+                <p class="list-decription">
+                  Или листья в ручье. Тут дело в лёгкой медитации, которая
+                  помогает успокоиться. Ведь часто именно тревожные мысли о
+                  сложных задачах как раз и мешают эти сложные задачи делать. В
+                  такие моменты можно закрыть глаза и представить, что чистое
+                  небо — это вы, а облака — тревожные мысли. И сколько бы их ни
+                  было — ясное небо всегда будет где-то там, за тучами, и никуда
+                  не денется. Это упражнение поможет вернуться в настоящий
+                  момент, а не волноваться о потенциальных проблемах из
+                  будущего.
+                </p>
+              </article>
+            </li>
+            <li class="list-item">
+              <article class="list-article">
+                <h4 class="list-title">Включите музыку</h4>
+                <p class="list-decription">
+                  Но не любую, и не любимую. Любимая может быть связана с
+                  сильными положительными эмоциями, которые тоже очень сильно
+                  отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная.
+                  Можно вообще попробовать включить плейлист в «белым шумом» или
+                  нейромузыкой.
+                </p>
+              </article>
+            </li>
+            <li class="list-item">
+              <article class="list-article">
+                <h4 class="list-title">Прогуляйтесь</h4>
+                <p class="list-decription">
+                  Или даже пробегитесь. Лучше найти парк или лес: один
+                  эксперимент показал, что созерцание природы повышает
+                  концентрацию, в то время как после просмотра городских
+                  пейзажей она наоборот понижается. Можно совместить прогулку с
+                  физическими упражнениями или бегом — так в мозг поступит ещё
+                  больше кислорода и он будет лучше работать. Но и простая
+                  двадцатиминутная прогулка — тоже отличный вариант.
+                </p>
+              </article>
+            </li>
+            <li class="list-item">
+              <article class="list-article">
+                <h4 class="list-title">Хорошо ешьте</h4>
+                <p class="list-decription">
+                  Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+                  которые препятствуют резким скачкам сахара в крови. Например,
+                  с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+                  чечевица, фасоль), коричневый рис, хлеб из цельнозерновой
+                  пшеницы.
+                </p>
+              </article>
+            </li>
+            <li class="list-item">
+              <article class="list-article">
+                <h4 class="list-title">Читайте</h4>
+                <p class="list-decription">
+                  Настоящие бумажные книги. Это правда помогает с концентрацией:
+                  чтобы прочитать пост в соцсети, достаточно нескольких минут
+                  или даже секунд. А вот интересная книга способна затянуть и на
+                  несколько часов и круто тренирует направленное внимание.
+                </p>
+              </article>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section-gallery">
+        <h2 class="list-title">А можно в картинках?</h2>
+        <ul class="gallery-list">
+          <li class="gallery-list-item">
+            <picture class="picture">
+              <img
+                src="./images/sunset.png"
+                class="image-gallery"
+                alt="Представьте небо и облака"
+                loading="lazy"
+              />
+            </picture>
+          </li>
+          <li class="gallery-list-item">
+            <picture class="picture">
+              <img
+                src="./images/ice-cream.png"
+                class="image-gallery"
+                alt="Хорошо ешьте"
+                loading="lazy"
+              />
+            </picture>
+          </li>
+          <li class="gallery-list-item">
+            <picture class="picture">
+              <img
+                src="./images/tape.png"
+                class="image-gallery"
+                alt="Включите музыку"
+                loading="lazy"
+              />
+            </picture>
+          </li>
+          <li class="gallery-list-item">
+            <picture class="picture">
+              <img
+                src="./images/books.png"
+                class="image-gallery"
+                alt="Читайте книги"
+                loading="lazy"
+              />
+            </picture>
+          </li>
+          <li class="gallery-list-item">
+            <picture class="picture">
+              <img
+                src="./images/street.png"
+                class="image-gallery"
+                alt="Прогуляйтесь"
+                loading="lazy"
+              />
+            </picture>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <h1 class="footer-title">focus</h1>
+    </footer>
+
     <script src="./scripts/script.js"></script>
   </body>
 </html>
