--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./images/favicon.svg" rel="icon" sizes="any" />
+    <link rel="icon" href="./images/favicon.ico" sizes="any" />
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="./images/mobile-icon.png" />
     <meta name="color-scheme" content="dark light" />
     <title>Сложно сосредоточиться</title>
     <link rel="stylesheet" href="./fonts/fonts.css" />
@@ -277,9 +280,8 @@
         </ul>
       </section>
     </main>
-
     <footer class="footer">
-      <h1 class="footer-title">focus</h1>
+      <h2 class="footer-title">focus</h2>
     </footer>
 
     <script src="./scripts/script.js"></script>
