fix: critical remarks

--- a/index.html
+++ b/index.html
@@ -45,10 +45,7 @@
           </li>
         </ul>
       </nav>
-      <div class="rec" aria-hidden="true">
-        <span class="rec-text">rec</span>
-        <span class="rec-dot"></span>
-      </div>
+      <span class="rec" aria-hidden="true">rec</span>
 
       <h1 class="header-title">no focus</h1>
 
@@ -58,7 +55,7 @@
       </p>
     </header>
     <main class="main">
-      <section class="section-why">
+      <section class="section section-why">
         <h2 class="section-title">Почему сосредоточиться так сложно</h2>
         <ul class="list-articles">
           <li class="list-item">
@@ -100,7 +97,7 @@
           </li>
         </ul>
       </section>
-      <section class="section-reasons">
+      <section class="section section-reasons">
         <h2 class="section-title">Что снижает концентрацию внимания?</h2>
         <ul class="list-articles">
           <li class="list-item">
@@ -146,7 +143,7 @@
           </li>
         </ul>
       </section>
-      <section class="section-adviсe">
+      <section class="section section-adviсe">
         <h2 class="section-title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
@@ -189,11 +186,17 @@
                 <h4 class="list-title">Прогуляйтесь</h4>
                 <p class="list-decription">
                   Или даже пробегитесь. Лучше найти парк или лес: один
-                  эксперимент показал, что созерцание природы повышает
-                  концентрацию, в то время как после просмотра городских
-                  пейзажей она наоборот понижается. Можно совместить прогулку с
-                  физическими упражнениями или бегом — так в мозг поступит ещё
-                  больше кислорода и он будет лучше работать. Но и простая
+                  эксперимент
+                  <a
+                    target="_blank"
+                    href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+                    class="link"
+                    >показал</a
+                  >, что созерцание природы повышает концентрацию, в то время
+                  как после просмотра городских пейзажей она наоборот
+                  понижается. Можно совместить прогулку с физическими
+                  упражнениями или бегом — так в мозг поступит ещё больше
+                  кислорода и он будет лучше работать. Но и простая
                   двадцатиминутная прогулка — тоже отличный вариант.
                 </p>
               </article>
@@ -224,7 +227,7 @@
           </ul>
         </div>
       </section>
-      <section class="section-gallery">
+      <section class="section section-gallery">
         <h2 class="list-title">А можно в картинках?</h2>
         <ul class="gallery-list">
           <li class="gallery-list-item">
@@ -232,7 +235,7 @@
               <img
                 src="./images/sunset.png"
                 class="image-gallery"
-                alt="Представьте небо и облака"
+                alt="Отображение совета: Представьте небо и облака."
                 loading="lazy"
               />
             </picture>
@@ -242,7 +245,7 @@
               <img
                 src="./images/ice-cream.png"
                 class="image-gallery"
-                alt="Хорошо ешьте"
+                alt="Отображение совета: Хорошо ешьте.Большая тарелка мороженого и ягод."
                 loading="lazy"
               />
             </picture>
@@ -252,7 +255,7 @@
               <img
                 src="./images/tape.png"
                 class="image-gallery"
-                alt="Включите музыку"
+                alt="Отображение совета: Включите музыку.Кассетный плеер крупным планом."
                 loading="lazy"
               />
             </picture>
@@ -262,7 +265,7 @@
               <img
                 src="./images/books.png"
                 class="image-gallery"
-                alt="Читайте книги"
+                alt="Отображение совета: Читайте книги.Стопка книг."
                 loading="lazy"
               />
             </picture>
@@ -272,7 +275,7 @@
               <img
                 src="./images/street.png"
                 class="image-gallery"
-                alt="Прогуляйтесь"
+                alt="Отображение совета: Прогуляйтесь. Крупный план улицы."
                 loading="lazy"
               />
             </picture>
@@ -280,7 +283,7 @@
         </ul>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer decorated-zone">
       <h2 class="footer-title">focus</h2>
     </footer>
 
