--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
@@ -59,7 +59,7 @@
           <li class="list-item">
             <article class="list-article">
               <h3 class="list-title">Многозадачность</h3>
-              <p class="list-decription">
+              <p class="list-description">
                 Особенно сложно сосредоточиться, когда задач много и все они —
                 важные. Где же легендарная многозадачность, когда она так нужна
                 вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
@@ -80,7 +80,7 @@
           <li class="list-item">
             <article class="list-article">
               <h3 class="list-title">Дофамин</h3>
-              <p class="list-decription">
+              <p class="list-description">
                 С гормонами стресса всё понятно, но дальше — ещё интереснее. В
                 нашей невозможности сосредоточиться замешана и полная
                 противоположность стрессу — дофамин. Это вещество участвует в
@@ -101,7 +101,7 @@
           <li class="list-item">
             <article class="list-article">
               <h3 class="list-title">Многозадачность</h3>
-              <p class="list-decription">
+              <p class="list-description">
                 Как концентрация может снижаться из-за… концентрации? Любая
                 стрессовая ситуация (и резко меняющийся мир в целом) заставляет
                 наш мозг постоянно «сканировать» окружающую среду на предмет
@@ -114,7 +114,7 @@
           <li class="list-item">
             <article class="list-article">
               <h3 class="list-title">Еда</h3>
-              <p class="list-decription">
+              <p class="list-description">
                 «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
                 доставляют в мозг энергию и помогают ему лучше работать. Но
                 уходит эта энергия также быстро, как и приходит. А мы в
@@ -127,7 +127,7 @@
           <li class="list-item">
             <article class="list-article">
               <h3 class="list-title">Гаджеты</h3>
-              <p class="list-decription">
+              <p class="list-description">
                 Да-да, это та самая ситуация, когда на экране ноутбука — код, в
                 наушниках — подкаст, а на компьютере фоном — ещё и видео с
                 забавными утятами. В результате мозг пытается переключиться с
@@ -141,7 +141,7 @@
           </li>
         </ul>
       </section>
-      <section class="section section-adviсe">
+      <section class="section section-advise">
         <h2 class="section-title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
@@ -154,7 +154,7 @@
             <li class="list-item">
               <article class="list-article">
                 <h4 class="list-title">Представьте небо и облака</h4>
-                <p class="list-decription">
+                <p class="list-description">
                   Или листья в ручье. Тут дело в лёгкой медитации, которая
                   помогает успокоиться. Ведь часто именно тревожные мысли о
                   сложных задачах как раз и мешают эти сложные задачи делать. В
@@ -170,7 +170,7 @@
             <li class="list-item">
               <article class="list-article">
                 <h4 class="list-title">Включите музыку</h4>
-                <p class="list-decription">
+                <p class="list-description">
                   Но не любую, и не любимую. Любимая может быть связана с
                   сильными положительными эмоциями, которые тоже очень сильно
                   отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная.
@@ -182,7 +182,7 @@
             <li class="list-item">
               <article class="list-article">
                 <h4 class="list-title">Прогуляйтесь</h4>
-                <p class="list-decription">
+                <p class="list-description">
                   Или даже пробегитесь. Лучше найти парк или лес: один
                   эксперимент
                   <a
@@ -202,7 +202,7 @@
             <li class="list-item">
               <article class="list-article">
                 <h4 class="list-title">Хорошо ешьте</h4>
-                <p class="list-decription">
+                <p class="list-description">
                   Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
                   которые препятствуют резким скачкам сахара в крови. Например,
                   с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
@@ -214,7 +214,7 @@
             <li class="list-item">
               <article class="list-article">
                 <h4 class="list-title">Читайте</h4>
-                <p class="list-decription">
+                <p class="list-description">
                   Настоящие бумажные книги. Это правда помогает с концентрацией:
                   чтобы прочитать пост в соцсети, достаточно нескольких минут
                   или даже секунд. А вот интересная книга способна затянуть и на
